--- a/src/input.css
+++ b/src/input.css
@@ -42,4 +42,8 @@
   }
 }
 
-
+ .swiper-button-next::after,
+  .swiper-button-prev::after {
+    font-size: 12px !important;
+    font-weight: 600 !important;
+  }
